@@ -2,8 +2,12 @@ package niemir.security;
 
 import lombok.RequiredArgsConstructor;
 import niemir.security.config.CustomAuthEntryPoint;
+import niemir.security.config.CustomAuthFailureHandler;
+import niemir.security.config.CustomAuthSuccessHandler;
+import niemir.security.config.CustomLogoutSuccessHandler;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.env.Environment;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
@@ -19,11 +23,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.OncePerRequestFilter;
-import org.springframework.web.servlet.view.InternalResourceViewResolver;
 import org.springframework.web.util.WebUtils;
-import niemir.security.config.CustomAuthFailureHandler;
-import niemir.security.config.CustomAuthSuccessHandler;
-import niemir.security.config.CustomLogoutSuccessHandler;
 
 import javax.servlet.Filter;
 import javax.servlet.FilterChain;
@@ -35,6 +35,7 @@ import javax.sql.DataSource;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 
 @Configuration
@@ -49,34 +50,32 @@ public class WebSecurityConfig {
     private final CustomAuthEntryPoint authEntryPoint;
     private final DataSource dataSource;
     private final PasswordEncoder passwordEncoder;
+    private final Environment env;
 
     @Bean
     protected SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         return http.cors().configurationSource(corsConfigurationSource())
                 .and()
-                .csrf(c -> c.ignoringAntMatchers("/api/users/**")
-                        .ignoringAntMatchers("/login"))
-                .csrf().csrfTokenRepository(csrfTokenRepository())
-                .and()
-                .headers().frameOptions().sameOrigin()
-                .and()
-                .addFilterAfter(csrfHeaderFilter(), CsrfFilter.class)
+                //.csrf(c -> c.ignoringAntMatchers("/api/users/**")
+                //        .ignoringAntMatchers("/login"))
+                .csrf().csrfTokenRepository(csrfTokenRepository()).disable()
+
+                //.addFilterAfter(csrfHeaderFilter(), CsrfFilter.class)
                 .headers().frameOptions().sameOrigin()
                 .and()
                 .authorizeRequests(auth -> auth
                         .mvcMatchers("/api/comments/**").hasAnyAuthority("ROLE_USER", "USER", "USER_ROLE", "MOD", "ADMIN")
                         .mvcMatchers(HttpMethod.POST, "/api/posts/**").hasAnyAuthority("ROLE_USER", "USER", "USER_ROLE", "MOD", "ADMIN")
                         .mvcMatchers("/api/users/**").permitAll()//hasAnyAuthority("ROLE_USER", "USER", "USER_ROLE", "MOD", "ADMIN")
-                        .mvcMatchers("/swagger-ui/**").permitAll()
-                        .anyRequest().permitAll())
+                        .mvcMatchers("/swagger-ui/**").permitAll())
                 .formLogin().successHandler(authSuccessHandler).failureHandler(authFailureHandler)
-                .usernameParameter("username").passwordParameter("password").permitAll()
+                .usernameParameter("username").passwordParameter("password")
                 .and().userDetailsService(jpaUserDetailsService)
                 .exceptionHandling()
                 .authenticationEntryPoint(authEntryPoint)
                 .and()
                 .logout().invalidateHttpSession(true)
-                .deleteCookies("JSESSIONID").logoutSuccessHandler(logoutSuccessHandler)
+                .deleteCookies("JSESSIONID", "XSRF-TOKEN").logoutSuccessHandler(logoutSuccessHandler)
                 .and()
                 .build();
     }
@@ -95,7 +94,8 @@ public class WebSecurityConfig {
                     if (cookie == null || token != null && !token.equals(cookie.getValue())) {
                         cookie = new Cookie("XSRF-TOKEN", token);
                         cookie.setPath("/");
-                        cookie.setDomain("localhost");
+                        cookie.setDomain(env.getProperty("domain"));
+
                         response.addCookie(cookie);
                     }
                 }
@@ -104,21 +104,17 @@ public class WebSecurityConfig {
         };
     }
 
-    //swagger element
-    @Bean
-    public InternalResourceViewResolver defaultViewResolver() {
-        return new InternalResourceViewResolver();
-    }
-
     private CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:4200"
+        configuration.setAllowedOrigins(List.of(
+                Optional.ofNullable(env.getProperty("frontendAddress")).orElse("https://localhost:4200")
+                , "http://localhost:4200"
                 , "https://niemir.toadres.pl"
                 , "http://niemir.toadres.pl"
                 , "http://frontend"
         , "http://frontend:80"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS", "DELETE", "PUT", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.addExposedHeader("File-Name");
         configuration.addExposedHeader("Access-Control-Allow-Origin");
         configuration.setAllowCredentials(true);
